wkd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openpgpkey-hashbang-sh
  labels:
    app.kubernetes.io/name: openpgpkey-hashbang-sh
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - openpgpkey.hashbang.sh
      secretName: openpgpkey-hashbang-sh-tls
  rules:
    - host: openpgpkey.hashbang.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wkd
                port:
                  name: http
